--- a/notebooks/PCA.ipynb
+++ b/notebooks/PCA.ipynb
@@ -824,12 +824,17 @@
    "source": [
     "## High Scores\n",
     "\n",
-    "| Dropout | Batchnorm | MLP Layers | L2 | LR    | Opt  | Batch Size | Steps  | Eval Acc. |\n",
-    "| ------- | --------- | ---------- | -- | --    | ---  | ---------- | -----  | --------- |\n",
-    "| 0       | False     | 2          | 0  | 0.001 | Adam | 32         | 20000 | 0.7216         |\n",
-    "| 0.2       | False     | 2          | 0  | 0.001 | Adam | 32         | 20000 | 0.7107         |\n",
-    "| 0       | True     | 2          | 0  | 0.001 | Adam | 32         | 20000 | 0.7380         |\n",
-    "| 0.2       | True     | 2          | 0  | 0.001 | Adam | 32         | 20000 | 0.7374        |"
+    "| Drop | BN | MLP | L2 | LR    | Opt  | Batch | Steps  | Ev-Acc | Comment | Tr-Time | Ev-Time |\n",
+    "| ---- | -- | --- | -- | --    | ---  | ----- | -----  | ------ | ------- | ------- | ------- |\n",
+    "| 0    | F  | 2   | 0  | 0.001 | Adam | 32    | 20000  | 0.7216 |         |         |       |\n",
+    "| 0.2  | F  | 2   | 0  | 0.001 | Adam | 32    | 20000  | 0.7107 |         |         |       |\n",
+    "| 0    | T  | 2   | 0  | 0.001 | Adam | 32    | 20000  | 0.7380 |         |         |       |\n",
+    "| 0.2  | T  | 2   | 0  | 0.001 | Adam | 32    | 20000  | 0.7374 |         |         |       |\n",
+    "| 0.2  | T  | 2   | 0  | 0.001 | Adam | 32    | 20000  | 0.725  | smerity | 5.3     | 0.035 |\n",
+    "| 0.2  | T  | 2   | 0  | 0.001 | Adam | 32    | 50000  | 0.754  | smerity |         |       |\n",
+    "| 0.2  | T  | 2   | 0  | 0.001 | Adam | 32    | 100000 | 0.771  | smerity |         |       |\n",
+    "| 0.2  | T  | 2   | 0  | 0.001 | Adam | 32    | 200000 | 0.788  | smerity |         |       |\n",
+    "| 0.2  | T  | 2   | 0  | 0.001 | Adam | 512   | 20000 | 0.8047  | smerity | 7.5        |       |"
    ]
   },
   {
