Train SNLI baseline in 3m.

--- a/notebooks/PCA.ipynb
+++ b/notebooks/PCA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 306,
    "metadata": {
     "scrolled": true
    },
@@ -67,6 +67,7 @@
      "output_type": "stream",
      "text": [
       "{\n",
+      "    \"batch_size\": 512, \n",
       "    \"cache\": \"/home/dexter/cache/\", \n",
       "    \"data\": \"/home/dexter/data/snli_1.0/snli_1.0_train.jsonl\", \n",
       "    \"embedding_keep_rate\": 0.5, \n",
@@ -115,6 +116,9 @@
     "# Preprocessing Settings\n",
     "parser.add_argument('--lowercase', action='store_true')\n",
     "parser.add_argument('--seq-length', type=int, default=200)\n",
+    "\n",
+    "# Train Settings\n",
+    "parser.add_argument('--batch-size', type=int, default=512)\n",
     "\n",
     "# Model Settings\n",
     "parser.add_argument('--model-dim', type=int, default=300)\n",
@@ -537,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,17 +564,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [],
    "source": [
     "d = (datasets['p'], datasets['h'], datasets['pt'], datasets['ht'], datasets['label'])\n",
-    "batch_it = BatchIterator(d, batch_size=32)"
+    "batch_it = BatchIterator(d, batch_size=FLAGS.batch_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 313,
    "metadata": {
     "scrolled": false
    },
@@ -830,6 +834,7 @@
     "| 0.2  | F  | 2   | 0  | 0.001 | Adam | 32    | 20000  | 0.7107 |         |         |       |\n",
     "| 0    | T  | 2   | 0  | 0.001 | Adam | 32    | 20000  | 0.7380 |         |         |       |\n",
     "| 0.2  | T  | 2   | 0  | 0.001 | Adam | 32    | 20000  | 0.7374 |         |         |       |\n",
+    "| 0.2  | T  | 2   | 0  | 0.001 | Adam | 512    | 20000  | ? |         | 7.5        |       |\n",
     "| 0.2  | T  | 2   | 0  | 0.001 | Adam | 32    | 20000  | 0.725  | smerity | 5.3     | 0.035 |\n",
     "| 0.2  | T  | 2   | 0  | 0.001 | Adam | 32    | 50000  | 0.754  | smerity |         |       |\n",
     "| 0.2  | T  | 2   | 0  | 0.001 | Adam | 32    | 100000 | 0.771  | smerity |         |       |\n",
@@ -839,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 316,
    "metadata": {
     "scrolled": false
    },
@@ -893,90 +898,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step=0 Train-Loss=1.18662786484 Time=0.279833\n",
-      "Step=0 Eval-Loss=1.09863126278 Eval-Acc=0.333976833977 Time=0.041553\n",
-      "Step=1000 Train-Loss=1.20499014854 Time=4.905189\n",
-      "Step=1000 Eval-Loss=0.874702513218 Eval-Acc=0.597845966267 Time=0.0378059999998\n",
-      "Step=2000 Train-Loss=0.868790030479 Time=4.667044\n",
-      "Step=2000 Eval-Loss=0.836248755455 Eval-Acc=0.630562893721 Time=0.035046\n",
-      "Step=3000 Train-Loss=1.09625053406 Time=4.795091\n",
-      "Step=3000 Eval-Loss=0.782176554203 Eval-Acc=0.657691526113 Time=0.0348789999998\n",
-      "Step=4000 Train-Loss=0.717527866364 Time=4.684055\n",
-      "Step=4000 Eval-Loss=0.752758264542 Eval-Acc=0.672525909368 Time=0.0349819999997\n",
-      "Step=5000 Train-Loss=0.861385047436 Time=4.583067\n",
-      "Step=5000 Eval-Loss=0.751553416252 Eval-Acc=0.675066043487 Time=0.035007\n",
-      "Step=6000 Train-Loss=0.625557899475 Time=4.683086\n",
-      "Step=6000 Eval-Loss=0.732785820961 Eval-Acc=0.681568786832 Time=0.0350239999998\n",
-      "Step=7000 Train-Loss=0.70935189724 Time=4.68178\n",
-      "Step=7000 Eval-Loss=0.711543679237 Eval-Acc=0.696199959358 Time=0.034983\n",
-      "Step=8000 Train-Loss=0.58507168293 Time=4.636959\n",
-      "Step=8000 Eval-Loss=0.733917653561 Eval-Acc=0.687055476529 Time=0.0349690000003\n",
-      "Step=9000 Train-Loss=0.597364902496 Time=4.674385\n",
-      "Step=9000 Eval-Loss=0.708019137383 Eval-Acc=0.698130461288 Time=0.034936\n",
-      "Step=10000 Train-Loss=0.682228147984 Time=4.525131\n",
-      "Step=10000 Eval-Loss=0.697687745094 Eval-Acc=0.709611867507 Time=0.0349059999999\n",
-      "Step=11000 Train-Loss=0.789884567261 Time=4.880309\n",
-      "Step=11000 Eval-Loss=0.68805539608 Eval-Acc=0.708392603129 Time=0.0385800000004\n",
-      "Step=12000 Train-Loss=0.739111244678 Time=4.816097\n",
-      "Step=12000 Eval-Loss=0.669518947601 Eval-Acc=0.718959561065 Time=0.0359900000003\n",
-      "Step=13000 Train-Loss=0.881942868233 Time=4.711586\n",
-      "Step=13000 Eval-Loss=0.671702384949 Eval-Acc=0.720077220077 Time=0.035007\n",
-      "Step=14000 Train-Loss=0.890011906624 Time=4.390248\n",
-      "Step=14000 Eval-Loss=0.673914968967 Eval-Acc=0.715403373298 Time=0.034979\n",
-      "Step=15000 Train-Loss=0.86118388176 Time=4.380015\n",
-      "Step=15000 Eval-Loss=0.657119572163 Eval-Acc=0.729221702906 Time=0.0349660000002\n",
-      "Step=16000 Train-Loss=0.817239642143 Time=5.149016\n",
-      "Step=16000 Eval-Loss=0.650311887264 Eval-Acc=0.731761837025 Time=0.0351799999999\n",
-      "Step=17000 Train-Loss=0.613249003887 Time=4.642049\n",
-      "Step=17000 Eval-Loss=0.653424918652 Eval-Acc=0.726986384881 Time=0.0349839999999\n",
-      "Step=18000 Train-Loss=0.860231101513 Time=5.653479\n",
-      "Step=18000 Eval-Loss=0.652355194092 Eval-Acc=0.728815281447 Time=0.0351460000002\n",
-      "Step=19000 Train-Loss=0.844220161438 Time=5.150049\n",
-      "Step=19000 Eval-Loss=0.646817803383 Eval-Acc=0.732473074578 Time=0.03523\n",
-      "Step=20000 Train-Loss=0.715273737907 Time=5.326262\n",
-      "Step=20000 Eval-Loss=0.63896048069 Eval-Acc=0.737451737452 Time=0.0351620000001\n",
-      "Step=21000 Train-Loss=0.685772001743 Time=5.228579\n",
-      "Step=21000 Eval-Loss=0.64057713747 Eval-Acc=0.735216419427 Time=0.040015\n",
-      "Step=22000 Train-Loss=0.662418484688 Time=5.328905\n",
-      "Step=22000 Eval-Loss=0.63465231657 Eval-Acc=0.735419630156 Time=0.038689\n",
-      "Step=23000 Train-Loss=0.852486908436 Time=4.957468\n",
-      "Step=23000 Eval-Loss=0.632202386856 Eval-Acc=0.732574679943 Time=0.036595\n",
-      "Step=24000 Train-Loss=0.821402490139 Time=4.412793\n",
-      "Step=24000 Eval-Loss=0.646216571331 Eval-Acc=0.729221702906 Time=0.0350010000002\n",
-      "Step=25000 Train-Loss=0.5168800354 Time=4.464217\n",
-      "Step=25000 Eval-Loss=0.628263056278 Eval-Acc=0.736943710628 Time=0.035018\n",
-      "Step=26000 Train-Loss=0.469749450684 Time=4.855785\n",
-      "Step=26000 Eval-Loss=0.625346183777 Eval-Acc=0.740093476936 Time=0.035265\n",
-      "Step=27000 Train-Loss=0.552484750748 Time=5.037123\n",
-      "Step=27000 Eval-Loss=0.618997514248 Eval-Acc=0.744259296891 Time=0.035202\n",
-      "Step=28000 Train-Loss=0.840068161488 Time=4.904135\n",
-      "Step=28000 Eval-Loss=0.630969583988 Eval-Acc=0.734403576509 Time=0.0349120000001\n",
-      "Step=29000 Train-Loss=0.567979931831 Time=4.460377\n",
-      "Step=29000 Eval-Loss=0.612249553204 Eval-Acc=0.747002641739 Time=0.034834\n",
-      "Step=30000 Train-Loss=0.865968585014 Time=4.849944\n",
-      "Step=30000 Eval-Loss=0.631808578968 Eval-Acc=0.739077423288 Time=0.0351909999999\n",
-      "Step=31000 Train-Loss=0.712297022343 Time=4.861106\n",
-      "Step=31000 Eval-Loss=0.605366826057 Eval-Acc=0.752082909978 Time=0.039479\n",
-      "Step=32000 Train-Loss=0.74375975132 Time=4.954318\n",
-      "Step=32000 Eval-Loss=0.609601438046 Eval-Acc=0.755943913839 Time=0.035222\n",
-      "Step=33000 Train-Loss=0.834683358669 Time=5.013467\n",
-      "Step=33000 Eval-Loss=0.604914605618 Eval-Acc=0.752489331437 Time=0.0351339999997\n",
-      "Step=34000 Train-Loss=0.453833580017 Time=4.996418\n",
-      "Step=34000 Eval-Loss=0.598558723927 Eval-Acc=0.755131070921 Time=0.0351719999999\n",
-      "Step=35000 Train-Loss=0.843820929527 Time=5.322236\n",
-      "Step=35000 Eval-Loss=0.600336909294 Eval-Acc=0.748628327576 Time=0.0352069999999\n",
-      "Step=36000 Train-Loss=0.694834172726 Time=5.085748\n",
-      "Step=36000 Eval-Loss=0.598136246204 Eval-Acc=0.751981304613 Time=0.035124\n",
-      "Step=37000 Train-Loss=0.675667881966 Time=5.086244\n",
-      "Step=37000 Eval-Loss=0.594146430492 Eval-Acc=0.754927860191 Time=0.0349579999997\n",
-      "Step=38000 Train-Loss=0.555254876614 Time=5.048284\n",
-      "Step=38000 Eval-Loss=0.613394916058 Eval-Acc=0.745275350539 Time=0.0349899999997\n",
-      "Step=39000 Train-Loss=0.534428656101 Time=5.10576\n",
-      "Step=39000 Eval-Loss=0.58314794302 Eval-Acc=0.759195285511 Time=0.0351519999999\n",
-      "Step=40000 Train-Loss=0.6614331007 Time=5.110656\n",
-      "Step=40000 Eval-Loss=0.590972363949 Eval-Acc=0.754216622638 Time=0.039914\n",
-      "Step=41000 Train-Loss=0.755248188972 Time=5.067627\n",
-      "Step=41000 Eval-Loss=0.59176504612 Eval-Acc=0.754724649461 Time=0.038697\n"
+      "Step=0 Train-Loss=1.10635817051 Time=0.241033\n",
+      "Step=0 Eval-Loss=1.10215938091 Eval-Acc=0.345255029466 Time=0.0418229999996\n",
+      "Step=1000 Train-Loss=0.659554302692 Time=6.482896\n",
+      "Step=1000 Eval-Loss=0.644862353802 Eval-Acc=0.730948994107 Time=0.0345700000007\n",
+      "Step=2000 Train-Loss=0.637946844101 Time=6.692279\n",
+      "Step=2000 Eval-Loss=0.593090891838 Eval-Acc=0.755740703109 Time=0.0346280000003\n",
+      "Step=3000 Train-Loss=0.571715593338 Time=6.827253\n",
+      "Step=3000 Eval-Loss=0.565420687199 Eval-Acc=0.769051005893 Time=0.0346959999997\n",
+      "Step=4000 Train-Loss=0.559849321842 Time=6.578488\n",
+      "Step=4000 Eval-Loss=0.543025195599 Eval-Acc=0.777890672628 Time=0.0346880000006\n",
+      "Step=5000 Train-Loss=0.573961615562 Time=6.555434\n",
+      "Step=5000 Eval-Loss=0.536374628544 Eval-Acc=0.783783783784 Time=0.0350719999997\n",
+      "Step=6000 Train-Loss=0.596832454205 Time=6.565341\n",
+      "Step=6000 Eval-Loss=0.515807986259 Eval-Acc=0.790388132493 Time=0.0350520000002\n",
+      "Step=7000 Train-Loss=0.483981639147 Time=6.576163\n",
+      "Step=7000 Eval-Loss=0.511485338211 Eval-Acc=0.792623450518 Time=0.0350330000001\n",
+      "Step=8000 Train-Loss=0.526387572289 Time=6.576816\n",
+      "Step=8000 Eval-Loss=0.510598838329 Eval-Acc=0.795671611461 Time=0.0350450000005\n",
+      "Step=9000 Train-Loss=0.484887927771 Time=6.577231\n",
+      "Step=9000 Eval-Loss=0.501876354218 Eval-Acc=0.79841495631 Time=0.0350390000003\n",
+      "Step=10000 Train-Loss=0.479368984699 Time=6.56885\n",
+      "Step=10000 Eval-Loss=0.504984140396 Eval-Acc=0.802580776265 Time=0.0349839999999\n",
+      "Step=11000 Train-Loss=0.384218722582 Time=6.581807\n",
+      "Step=11000 Eval-Loss=0.493714869022 Eval-Acc=0.805730542573 Time=0.0351920000003\n",
+      "Step=12000 Train-Loss=0.408243745565 Time=6.600613\n",
+      "Step=12000 Eval-Loss=0.500447452068 Eval-Acc=0.803800040642 Time=0.0352789999997\n",
+      "Step=13000 Train-Loss=0.414138823748 Time=6.61236\n",
+      "Step=13000 Eval-Loss=0.506603121758 Eval-Acc=0.803393619183 Time=0.0352240000002\n",
+      "Step=14000 Train-Loss=0.415993958712 Time=6.578375\n",
+      "Step=14000 Eval-Loss=0.504230320454 Eval-Acc=0.805425726478 Time=0.0352560000001\n",
+      "Step=15000 Train-Loss=0.458718746901 Time=6.463339\n",
+      "Step=15000 Eval-Loss=0.50841999054 Eval-Acc=0.804003251372 Time=0.0352810000004\n",
+      "Step=16000 Train-Loss=0.425811588764 Time=6.902142\n",
+      "Step=16000 Eval-Loss=0.498528301716 Eval-Acc=0.812436496647 Time=0.0352520000006\n",
+      "Step=17000 Train-Loss=0.388148576021 Time=6.757912\n",
+      "Step=17000 Eval-Loss=0.498839527369 Eval-Acc=0.810201178622 Time=0.035613\n",
+      "Step=18000 Train-Loss=0.376446664333 Time=6.773416\n",
+      "Step=18000 Eval-Loss=0.504230976105 Eval-Acc=0.809388335704 Time=0.0355650000001\n",
+      "Step=19000 Train-Loss=0.405903220177 Time=6.735063\n",
+      "Step=19000 Eval-Loss=0.504760742188 Eval-Acc=0.807762649868 Time=0.035637\n",
+      "Step=20000 Train-Loss=0.385099172592 Time=6.735774\n",
+      "Step=20000 Eval-Loss=0.509470641613 Eval-Acc=0.807762649868 Time=0.0356060000004\n"
      ]
     },
     {
@@ -986,9 +949,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-247-5689f69d737e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     75\u001b[0m     \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclosure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     76\u001b[0m     \u001b[0mopt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 77\u001b[0;31m     \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     78\u001b[0m     \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclip_grad_norm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_norm\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1.\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/dexter/anaconda2/envs/sentence-hunting/lib/python2.7/site-packages/torch/autograd/variable.pyc\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph, retain_variables)\u001b[0m\n\u001b[1;32m    154\u001b[0m                 \u001b[0mVariable\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    155\u001b[0m         \"\"\"\n\u001b[0;32m--> 156\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_variables\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    157\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    158\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/dexter/anaconda2/envs/sentence-hunting/lib/python2.7/site-packages/torch/autograd/__init__.pyc\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(variables, grad_variables, retain_graph, create_graph, retain_variables)\u001b[0m\n\u001b[1;32m     96\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     97\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[0;32m---> 98\u001b[0;31m         variables, grad_variables, retain_graph)\n\u001b[0m\u001b[1;32m     99\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    100\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-316-5689f69d737e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     67\u001b[0m     \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 69\u001b[0;31m     \u001b[0mtrain_p\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprepare_tokens\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     70\u001b[0m     \u001b[0mtrain_h\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprepare_tokens\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     71\u001b[0m     \u001b[0mtrain_label\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprepare_labels\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-314-62b03cf1ecd4>\u001b[0m in \u001b[0;36mprepare_tokens\u001b[0;34m(tokens)\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mprepare_tokens\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtokens\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0mtokens\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtokens\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLongTensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtokens\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mprepare_labels\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
